# GitSync

./: .gitignore  PKGBUILD  README.md  index.html  package-lock.json  package.json  project_structure_analysis.md  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  bg.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: defaultBg.ts
src/components/: ChangelogGenerator.tsx  CommandPalette.tsx  CommitFilter.tsx  ConflictResolver.tsx  DiffViewer.tsx  EnhancedRebase.tsx  ExportReport.tsx  FeedbackOverlay.tsx  FileTree.tsx  FileViewer.tsx  GlassModal.tsx  GraphView.tsx  HookManager.tsx  MultiRepo.tsx  QueryConsole.tsx  RemoteManager.tsx  SafeDirectoryModal.tsx  SemanticSearch.tsx  TagManager.tsx  TimeMachine.tsx  UIManager.tsx  WelcomeModal.tsx
src/services/: tauriService.ts
src/utils/: diffUtils.tsx  fileIcons.tsx
