[package]
name = "GitSync"
version = "0.3.2"
description = "GitSync - Git Repository Browser & SQL Analysis Tool"
authors = ["you"]
edition = "2021"

[lib]
name = "git_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.21.0"
chrono = "0.4.45"
shellexpand = "3.1.2"
base64 = "0.22"
similar = "2.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
